--- a/frontend/src/libs/shared/navigation/GlobalNavigationBar.module.scss
+++ b/frontend/src/libs/shared/navigation/GlobalNavigationBar.module.scss
@@ -16,4 +16,14 @@
     @include flexbox(60px, row);
     @include glyph14Regular;
   }
+
+  .logoutButton {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    color: inherit;
+    font-size: inherit;
+    font-family: inherit;
+  }
 }
