--- a/frontend/src/styles/_color.scss
+++ b/frontend/src/styles/_color.scss
@@ -3,3 +3,12 @@ $gray-brt1: var(--gray-brt1);
 $gray-brt2: var(--gray-brt2);
 $white: var(--white);
 $red: var(--red);
+
+// New variables for buttons and gray shades
+$primary-button-bg: var(--primary-button-bg);
+$red-dark: var(--red-dark);
+$primary-600: var(--primary-600);
+$red-600: var(--red-600);
+$gray-200: var(--gray-200);
+$gray-300: var(--gray-300);
+$gray-800: var(--gray-800);
