--- a/frontend/src/styles/css/vars.css
+++ b/frontend/src/styles/css/vars.css
@@ -4,4 +4,13 @@
   --gray-brt2: #f3f3f3;
   --white: #ffffff;
   --red: #ff2828;
+  --primary-500: var(--primary-button-bg);
+  --red-500: var(--red-dark);
+  --primary-button-bg: var(--black);
+  --red-dark: #CC0000;
+  --primary-600: #1a1a1a;
+  --red-600: #a30000;
+  --gray-200: #e0e0e0;
+  --gray-300: #cccccc;
+  --gray-800: #424242;
 }
