feat: 좋아요 버튼 퍼블리싱

--- a/frontend/src/libs/style-detail/ui-style-detail/StyleDetailLayout.module.scss
+++ b/frontend/src/libs/style-detail/ui-style-detail/StyleDetailLayout.module.scss
@@ -44,7 +44,14 @@
     }
 
     .buttonsWrapper {
-      align-self: flex-end;
+      // align-self: flex-end;
+    }
+
+    .headerBottomRow {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%;
     }
   }
 
