feat: [frontend] 프로필 이미지 적용
style, curation, comment 각각 레이아웃에 유저 프로필 이미지를 추가한 코드입니다.
맨 처음 계정을 생성하고 프로필 사진이 없는 경우 그냥 기존대로 닉네임만 표기됩니다.

Related to: #96

--- a/frontend/src/libs/curating/ui-comment/CommentLayout.module.scss
+++ b/frontend/src/libs/curating/ui-comment/CommentLayout.module.scss
@@ -1,25 +1,33 @@
 .container {
-  padding: 20px 28px;
-  background-color: $gray-brt2;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
 
-  .nickname {
-    @include glyph16Regular;
-    margin-bottom: 10px;
-    color: $black;
+.authorInfo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
 
-    .author {
-      margin-left: 10px;
-      color: $gray-brt1;
-    }
+.profileImage {
+  border-radius: 50%;
+}
+
+.nickname {
+  color: var(--gray-60);
+
+  .author {
+    margin-left: 4px;
+    color: var(--primary);
   }
+}
 
-  .content {
-    @include glyph16Regular(22px);
-    white-space: pre-line;
-  }
+.content {
+  color: var(--gray-90);
+}
 
-  .buttonsWrapper {
-    width: fit-content;
-    margin-left: auto;
-  }
+.buttonsWrapper {
+  display: flex;
+  justify-content: flex-end;
 }
