--- a/frontend/src/libs/style-detail/ui-style-detail/StyleDetailLayout.module.scss
+++ b/frontend/src/libs/style-detail/ui-style-detail/StyleDetailLayout.module.scss
@@ -10,6 +10,14 @@
       @include glyph32Bold;
     }
 
+    .authorInfo {
+      @include flexbox(8px, row, center, center);
+    }
+
+    .profileImage {
+      border-radius: 50%;
+    }
+
     .nickname {
       @include glyph18Regular;
     }
