fix: 답글 안보이던 오류 드디어 해결!

--- a/frontend/src/libs/curating/ui-curating/CuratingLayout.module.scss
+++ b/frontend/src/libs/curating/ui-curating/CuratingLayout.module.scss
@@ -64,6 +64,9 @@
 
   .commentWrapper {
     margin-top: 24px;
+    padding: 16px;
+    background-color: $gray-brt2;
+    border-radius: 8px;
   }
 
   .postCommentButtonWrapper {
